feat(instance-date-types): restrict instance-date-type changes to central tenant
Closes: MODINVSTOR-1238